# xpotepu

./: CMakeLists.txt  Doxyfile.in  LICENSE  README.md  config.h.in
logic/: CMakeLists.txt  global.h  logic.c  logic.h  template.c  template.h
mxml/: CMakeLists.txt  config.h.in  mxml-attr.c  mxml-get.c  mxml-index.c  mxml-node.c  mxml-private.h  mxml-search.c  mxml-set.c  mxml-string.c  mxmldoc.c
tests/: CMakeLists.txt  helpers.h  logic_helper.cc  logic_helper.h  template_helper.cc  template_helper.h
tests/unit/: CMakeLists.txt
tests/unit/logic/: CMakeLists.txt  test_logic.cc  test_template.cc
